  replaced by a `mkvenv.py` script. See the updated
  link:install{outfilesuffix}#tox[install instructions] for details.

Fixed
~~~~~

- When quitting qutebrowser, components are now cleaned up differently. This
  should fix certain (rare) segmentation faults and exceptions when quitting,
  especially with the new exit scheme introduced in in PyQt5 5.13.1.

v1.9.0 (2020-01-08)
-------------------

Added
~~~~~

- Initial support for Qt 5.14.
- New `content.site_specific_quirks` setting which enables workarounds for
  websites with broken user agent parsing (enabled by default, see the "Fixed"
  section for fixed websites).
- New `qt.force_platformtheme` setting to force Qt to use a given platform
  theme.
- New `tabs.tooltips` setting which can be used to disable hover tooltips for
  tabs.
- New settings to configure the appearance of context menus:
  * `fonts.contextmenu`
  * `colors.contextmenu.menu.bg`
  * `colors.contextmenu.menu.fg`
  * `colors.contextmenu.selected.bg`
  * `colors.contextmenu.selected.fg`

Changed
~~~~~~~

- The macOS binaries now require macOS 10.13 High Sierra or newer. Support for
  macOS 10.12 Sierra has been dropped.
- The `content.headers.user_agent` setting now is a format string with the
  default value resembling the behavior of it being set to null before.
  This slightly changes the sent user agent for QtWebKit: Instead of mentioning
  qutebrowser and its version it now mentions the Qt version.
- The `qute-pass` userscript now has a new `--extra-url-suffixes` (`-s`)
  argument which passes extra URL suffixes to the tldextract library.
- A stack is now used for `:tab-focus last` rather than just saving one tab.
  Additionally, `:tab-focus` now understands `stack-prev` and `stack-next`
  arguments to traverse that stack.
- `:hint` now has a new `right-click` target which allows right-clicking
  elements via hints.
- The Terminus font has been removed from the default monospace fonts since it