@@ -56,6 +56,8 @@ Fixed
 - When quitting qutebrowser, components are now cleaned up differently. This
   should fix certain (rare) segmentation faults and exceptions when quitting,
   especially with the new exit scheme introduced in in PyQt5 5.13.1.
+- Added a workaround for per-domain settings (e.g. a JavaScript whitelist) not
+  being applied in some scenarios with Qt 5.13 and above.
 
 v1.9.0 (2020-01-08)
 -------------------
